syntax = "proto3";

package my_package;

import "google/protobuf/timestamp.proto";

message Property {
  string id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string hostID = 5;
  string createdAt = 6;
  string updatedAt = 7;
  repeated Booking bookings = 8;
  double basePrice = 9;
}

message Booking {
  string id = 1;
  string propertyID = 2;
  string userID = 3;
  string checkInDate = 4;
  string checkOutDate = 5;
  double totalPrice = 6;
  Location location = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message Location {
  string latitude = 1;
  string longitude = 2;
}

message ListPropertiesRequest {
  string ownerID = 1; // Optional: Filter properties by owner
}

message ListPropertiesResponse {
  repeated Property properties = 1;
}

message CreatePropertyRequest {
  string ownerID = 1;
  string address = 2;
  string description = 3;
  float price = 4;
}

message CreatePropertyResponse {
  Property property = 1;
}

message GetPropertyListingRequest {
  string propertyID = 1;
}

message GetPropertyListingResponse {
  Property property = 1;
}

service PropertyListingService {
  rpc ListProperties(ListPropertiesRequest) returns (ListPropertiesResponse);
  rpc CreateProperty(CreatePropertyRequest) returns (CreatePropertyResponse);
  rpc GetPropertyListing(GetPropertyListingRequest) returns (GetPropertyListingResponse);
}
